--- a/app/templates/app/cadastro_cursos.html
+++ b/app/templates/app/cadastro_cursos.html
@@ -8,7 +8,7 @@
 
 <table class="table">
     <tr><th>Nome do curso</th><th>Período</th><th>Faculdade</th></tr>
-        {% for curso in cursos %}
+        {% for curso in curso %}
           <tr><td>{{ curso.nome }}</td><td>{{ curso.periodo }}</td><td>{{ curso.instituicao }}</td></tr>
         {% endfor %}
 </table>
