--- a/app/templates/app/cadastro_cursos.html
+++ b/app/templates/app/cadastro_cursos.html
@@ -8,8 +8,8 @@
 
 <table class="table">
     <tr><th>Nome do curso</th><th>Período</th><th>Faculdade</th></tr>
-        {% for cursos in curso %}
-          <tr><td>{{ curso.nome }}</td><td>{{ curso.periodo }}</td><td>{{ curso.instituicao }}</td></tr>
+        {% for curso in cursos %}
+          <tr><td>{{ curso }}</td><td>Noturno</td><td>Faculdade Impacta</td></tr>
         {% endfor %}
 </table>
 
